--- a/index.html
+++ b/index.html
@@ -1,10 +1,157 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>杨鹏郅宏 - GitHub Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>杨鹏郅宏 - Portfolio</title>
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        :root {
+            --primary-color: #2c3e50;
+            --secondary-color: #3498db;
+            --text-color: #333;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 3rem;
+            padding: 2rem 0;
+            background: var(--primary-color);
+            color: white;
+        }
+
+        .avatar {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 1rem;
+            border: 3px solid white;
+        }
+
+        .links-section {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 1.5rem;
+            margin-top: 2rem;
+        }
+
+        .link-card {
+            background: white;
+            padding: 1.5rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .link-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .github-link {
+            display: flex;
+            align-items: center;
+            padding: 1rem;
+            margin: 0.5rem 0;
+            background: #f8f9fa;
+            border-radius: 5px;
+            text-decoration: none;
+            color: var(--text-color);
+            transition: background 0.3s ease;
+        }
+
+        .github-link:hover {
+            background: #e9ecef;
+        }
+
+        .github-link i {
+            margin-right: 1rem;
+            color: var(--secondary-color);
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 1rem;
+            }
+            
+            header {
+                padding: 1rem 0;
+            }
+        }
+    </style>
 </head>
 <body>
-  <h1>Welcome to My Learning Hub</h1>
-  <p>Code | Notes | Projects</p>
+    <header>
+        <div class="container">
+            <!-- 替换为你的头像URL -->
+            <img src="your-avatar.jpg" alt="Avatar" class="avatar">
+            <h1>Your Name</h1>
+            <p>Developer &amp; Creator</p>
+        </div>
+    </header>
+
+    <main class="container">
+        <section class="links-section">
+            <!-- GitHub 项目文件夹链接 -->
+            <div class="link-card">
+                <h2>GitHub Projects</h2>
+                <!-- 替换以下链接为你的实际GitHub路径 -->
+                <a href="https://github.com/komeijiYang/komeijiYang.github.io/tree/main/projects" 
+                   class="github-link" 
+                   target="_blank">
+                    <i class="fab fa-github"></i>
+                    Project Folder 1
+                </a>
+
+                <a href="https://github.com/komeijiYang/komeijiYang.github.io/tree/main/notes" 
+                   class="github-link" 
+                   target="_blank">
+                    <i class="fab fa-github"></i>
+                    Project Folder 2
+                </a>
+
+                <!-- 添加更多链接... -->
+            </div>
+
+            <!-- 联系信息 -->
+            <div class="link-card">
+                <h2>Contact</h2>
+                <a href="https://github.com/komeijiYang" 
+                   class="github-link" 
+                   target="_blank">
+                    <i class="fab fa-github"></i>
+                    GitHub Profile
+                </a>
+
+                <a href="mailto:17741278311@163.com" 
+                   class="github-link">
+                    <i class="fas fa-envelope"></i>
+                    Email Me
+                </a>
+
+                
+                </a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
