--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>杨鹏郅宏 - Portfolio</title>
+    <title>杨鹏郅宏 - 个人主页</title>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -104,8 +104,8 @@
         <div class="container">
             <!-- 替换为你的头像URL -->
             <img src="your-avatar.jpg" alt="Avatar" class="avatar">
-            <h1>Your Name</h1>
-            <p>Developer &amp; Creator</p>
+            <h1>杨鹏郅宏</h1>
+            <p>Developer &amp; Creator &amp; Learner</p>
         </div>
     </header>
 
@@ -119,14 +119,14 @@
                    class="github-link" 
                    target="_blank">
                     <i class="fab fa-github"></i>
-                    Project Folder 1
+                    Projects
                 </a>
 
                 <a href="https://github.com/komeijiYang/komeijiYang.github.io/tree/main/notes" 
                    class="github-link" 
                    target="_blank">
                     <i class="fab fa-github"></i>
-                    Project Folder 2
+                    Notes
                 </a>
 
                 <!-- 添加更多链接... -->
