--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <header>
         <div class="container">
             <!-- 替换为你的头像URL -->
-            <img src="your-avatar.jpg" alt="Avatar" class="avatar">
+            <img src="https://img.picui.cn/free/2025/02/18/67b48fa795763.jpg" alt="Avatar" class="avatar">
             <h1>杨鹏郅宏</h1>
             <p>Developer &amp; Creator &amp; Learner</p>
         </div>
